fixed nav bar and link spacing/positions

--- a/frontend/crebTest/style.css
+++ b/frontend/crebTest/style.css
@@ -6,6 +6,8 @@
 .main-header {
   padding-bottom: 85px;
   margin-left: 100px;
+  display: flex;
+  margin-top: 50px;
   /* padding-left: 20px;
   padding-right: 40px;
   padding: 20px 40 px; */
@@ -59,6 +61,8 @@ h1 {
   font-size: 26px;
   text-transform: none;
   font-style: normal;
+  margin-left: 10px;
+  margin-top: 10px;
 }
 
 h2 {
